--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,12 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+awsconfiguration.json
+amplifyconfiguration.json
+amplify-build-config.json
+amplify-gradle-config.json
+amplifytools.xcconfig
+
 #amplify
 amplify/\#current-cloud-backend
 amplify/.config/local-*
